--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,13 @@
   <artifactId>blog</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Blog</name>
-  
-  
-  <dependencies>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+
+
+    <dependencies>
   	<dependency>
   		<groupId>net.sourceforge.htmlunit</groupId>
   		<artifactId>htmlunit</artifactId>
